# md2word

./: .md2wordrc  README.md  pyproject.toml  需求文档.md
examples/: sample.md
macros/: format_macro.bas
md2word/: cli.py  config.py  converter.py  utils.py  word_macro.py
tests/: test_converter.py
