[project]
name = "md2word"
version = "0.1.0"
description = ""
authors = [
    {name = "qrkks",email = "qrkks3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pywin32 (>=311,<312)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
